data/derived/fa15/progs/unify/prog2322.ml.out
Characters 16-17:
  let x = sumList 2 4;;
                  ^
Error: This expression has type int but an expression was expected of type
         float
